Fix filter on mobile

--- a/src/customizations/aftersearch-nav/_aftersearch-nav.scss
+++ b/src/customizations/aftersearch-nav/_aftersearch-nav.scss
@@ -20,7 +20,7 @@
     &__filter-options {
         @include media('<tablet') {
             display: flex;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
             justify-content: space-between;
 
             &.#{$namespace}filter-horizontal {
